# subscriptemember

./: .gitignore  README.md  stack.yaml  subscriptemember.cabal
golang/: main.go
golang/src/subscriptemember/: main.go
haskell/: stack.yaml  subscriptemember.cabal
haskell/src/: AcidHandler.hs  GiantBombVideos.hs  HelperFunctions.hs  Keys.hs  ParserHelpers.hs  YoutubeApiBase.hs  YoutubeApiSubscriptions.hs
haskell/static/: subscriptemember.js
rust/: .env  Cargo.toml  Rocket.toml  tk.json
rust/migrations/20170116151545_generate_subscriptions/: up.sql
rust/migrations/20170120112216_channelid/: down.sql  up.sql
rust/migrations/20170123105704_videos/: down.sql  up.sql
rust/src/: giantbomb_video.rs  main.rs  schema.rs  subs_and_video.rs  youtube_base.rs  youtube_handler.rs  youtube_oauth.rs  youtube_subscriptions.rs  youtube_video.rs  youtubehandler.rs
rust/templates/: index.hbs  index.html  sub.html  subs.html
src/: AcidHandler.hs  GiantBombVideos.hs  GoogleHandler.hs  HelperFunctions.hs  Keys.hs  Main.hs  Oauth.hs  ParserHelpers.hs  SubAndVideo.hs  WebsocketsHandler.hs  YoutubeApi.hs  YoutubeApiBase.hs  YoutubeApiSubscriptions.hs  YoutubeApiVideos.hs
static/: subscriptemember.js
