[package]
name = "subscriptemember"
version = "0.5.0"
authors = ["Narfinger <Narfinger@users.noreply.github.com>"]

[features]
default = []

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = "0.4"
clippy = {version = "0.0", optional = true}
diesel = {version = "1.1", features = ["sqlite"]}
dotenv = "0.10"
handlebars = "0.31"
hyper = "0.11"
hyper-rustls = "0.6.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = {version = "0.3", features = ["handlebars_templates", "json"]}
tokio-core = "0.1"
r2d2 = "0.8"
r2d2-diesel = {version = "1.0"}
reqwest = "0.6"
oauth2 = "1.2.1"
nom = "3.0"
uuid = {version = "0.5", features = ["v4"]}
rayon = "0.9"
ws = "0.7.3"         # Lightweight, event-driven WebSockets for Rust.


