[package]
name = "subscriptemember"
version = "0.9.0"
authors = ["Narfinger <Narfinger@users.noreply.github.com>"]

[features]
default = []

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = "0.4"
clippy = {version = "0.0", optional = true}
diesel = {version = "~1.2.2", features = ["sqlite", "r2d2"]}
failure = "0.1"
handlebars = "0.31"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = {version = "0.3", features = ["handlebars_templates", "json"]}
tokio-core = "0.1"
preferences = "1.1"
reqwest = "0.8"
oauth2 = "1.2.1"
nom = "4.0"
uuid = {version = "0.6", features = ["v4"]}
rayon = "1.0"
url = "1.7"                  # URL library for Rust, based on the WHATWG URL Standard
ws = "0.7"         # Lightweight, event-driven WebSockets for Rust.


