[package]
name = "subscriptemember"
license = "GPL-3.0-only"
version = "0.9.0"
authors = ["Narfinger <Narfinger@users.noreply.github.com>"]
edition = "2018"

[features]
default = []

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
chrono-tz = "0.5"
clippy = {version = "0.0", optional = true}
diesel = {version = "1.3", features = ["sqlite", "r2d2"]}
failure = "0.1"
handlebars = "1.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = {version = "0.4", features = ["handlebars_templates", "json"]}
tokio-core = "0.1"
preferences = "1.1"
reqwest = "0.9"
oauth2 = "1.3"
nom = "4.1"
uuid = {version = "0.7", features = ["v4"]}
rayon = "1.0"
url = "1.7"                  # URL library for Rust, based on the WHATWG URL Standard
ws = "0.7"         # Lightweight, event-driven WebSockets for Rust.


